# gfxl

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  gfxl.sln  gfxl.vcxproj  gfxl.vcxproj.filters
assets/glsl/: raytracer.fs
assets/mitsuba/: mitsuba.mtl
assets/sponza/: sponza.mtl
gfxl/: gfxl.h  gfxl_common.h  gfxl_core.h  gfxl_graphics.h  gfxl_math.h  gfxl_window.h
glsl/: gfxl.fs  gfxl.vs  raytracer.vs  skybox.fs  skybox.vs
include/: stb_image.h
include/glad/: glad.h
src/: gfxl_graphics_opengl.cpp  win32_editor.cpp  win32_raytracer.cpp  win32_sandbox.cpp
src/gfxl/: gfxl_common.cpp  gfxl_graphics_opengl.cpp  gfxl_window.cpp
src/glad/: glad.c
src/runtime/: win32_raytracer.cpp  win32_sandbox.cpp
src/sandbox/: config.h  win32_raytracer.cpp  win32_sandbox.cpp
